--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 </div>
         
   
-/*  <div class="toggle sidebar-toggle" role="button">
+  <div class="toggle sidebar-toggle" role="button">
     <span class="toggle-line"></span>
     <span class="toggle-line"></span>
     <span class="toggle-line"></span>
@@ -136,7 +136,7 @@
   <div class="sidebar-dimmer"></div>
 
 
-    </header>    */
+    </header>    
 
     
   <div class="back-to-top" role="button" aria-label="回到頂端">
