--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
   <main class="main">
     <header class="header" itemscope itemtype="http://schema.org/WPHeader">
       <div class="header-inner"><div class="site-brand-container">
-  <div class="site-nav-toggle">
-    <div class="toggle" aria-label="切換導航欄" role="button">
-    </div>
-  </div>
+      <div class="site-nav-toggle">
+        <div class="toggle" aria-label="切換導航欄" role="button">
+        </div>
+      </div>
 
   <div class="site-meta">
 
@@ -85,7 +85,7 @@
 </div>
         
   
-  <div class="toggle sidebar-toggle" role="button">
+/*<div class="toggle sidebar-toggle" role="button">
     <span class="toggle-line"></span>
     <span class="toggle-line"></span>
     <span class="toggle-line"></span>
@@ -134,7 +134,7 @@
     </div>
   </aside>
   <div class="sidebar-dimmer"></div>
-
+*/
 
     </header>    
 
