--- a/index.html
+++ b/index.html
@@ -174,8 +174,34 @@
 
 
 
+<!--表單-->
+
 
 </div>
+  
+  <section id="contact">
+			<h2>聯絡我們</h2>
+			<form>
+				<label for="name">姓名</label>
+				<input type="text" id="name" name="name">
+				<label for="email">電子郵件</label>
+				<input type="email" id="email" name="email">
+				<label for="message">訊息</label>
+				<textarea id="message" name="message"></textarea>
+				<button type="submit">發送</button>
+			</form>
+			<div class="contact-info">
+				<h3>聯絡資訊</h3>
+			<p>歡迎透過以下方式聯絡我們：</p>
+				<ul>
+					<li><i class="fa fa-phone"></i> 0800-123-456</li>
+					<li><i class="fa fa-map-marker"></i> 台北市中正區忠孝西路一段1號</li>
+					<li><i class="fa fa-envelope"></i> info@liyuairc.com</li>
+	
+			</ul>
+			</div>
+		</section>
+  <!--表單-->
   </main>
 
   <footer class="footer">
