--- a/index.html
+++ b/index.html
@@ -34,6 +34,16 @@
 </head>
 <body itemscope itemtype="http://schema.org/WebPage" class="use-motion">
   <div class="headband"></div>
+	<header>
+		<h1>立宇空調</h1>
+		<nav>
+			<ul>
+				<li><a href="#services">業務介紹</a></li>
+				<li><a href="#projects">成品分享</a></li>
+				<li><a href="#contact">聯絡我們</a></li>
+			</ul>
+		</nav>
+	</header>
   <main class="main">
     <header class="header" itemscope itemtype="http://schema.org/WPHeader">
       <div class="header-inner"><div class="site-brand-container">
