--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <body itemscope itemtype="http://schema.org/WebPage" class="use-motion">
   <div class="headband"></div>
 	   <!--開頭-->
-	<header>
+	<web-header>
 		<h1>立宇空調</h1>
 		<nav>
 			<ul>
@@ -44,7 +44,7 @@
 				<li><a href="#contact">聯絡我們</a></li>
 			</ul>
 		</nav>
-	</header>
+	</web-header>
 	   <!--開頭-->
   <main class="main">
     <header class="header" itemscope itemtype="http://schema.org/WPHeader">
