--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-TW">
 <head>
-  <meta charset="UTF-8">
+<meta charset="UTF-8">
 <meta name="viewport" content="width=device-width">
 <meta name="theme-color" content="#222">
   <link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon-next.png">
@@ -12,9 +12,9 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.3/css/all.min.css" integrity="sha256-2H3fkXt6FEmrReK448mDVGKb3WW2ZZw35gI7vqHOE4Y=" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@3.1.1/animate.min.css" integrity="sha256-PR7ttpcvz8qrF57fur/yAx1qXMFJeJFiA6pSzWi0OIE=" crossorigin="anonymous">
 <script class="next-config" data-name="main" type="application/json">{"hostname":"amulll.github.io","root":"/","images":"/images","scheme":"Muse","version":"8.7.0","exturl":false,"sidebar":{"position":"left","display":"post","padding":18,"offset":12},"copycode":false,"bookmark":{"enable":false,"color":"#222","save":"auto"},"mediumzoom":false,"lazyload":false,"pangu":false,"comments":{"style":"tabs","active":null,"storage":true,"lazyload":false,"nav":null},"motion":{"enable":true,"async":false,"transition":{"post_block":"fadeIn","post_header":"fadeInDown","post_body":"fadeInDown","coll_header":"fadeInLeft","sidebar":"fadeInUp"}},"prism":false,"i18n":{"placeholder":"搜尋...","empty":"我們無法找到任何有關 ${query} 的搜索結果","hits_time":"${hits} 找到 ${time} 個結果","hits":"找到 ${hits} 個結果"}}</script><script src="/js/config.js"></script>
-<meta name="description" content="立宇空調帶給您最安心的服務">
+<meta name="description" content="立宇空調帶給您最安心的服務，冷氣出租，嘉義，專業服務，冷氣">
 <meta property="og:type" content="website">
-<meta property="og:title" content="立宇空調">
+<meta property="og:title" content="立宇空調，冷氣、嘉義、冷氣出租，專業服務">
 <meta property="og:url" content="https://amulll.github.io/index.html">
 <meta property="og:site_name" content="立宇空調">
 <meta property="og:description" content="立宇空調帶給您最安心的服務">
@@ -26,7 +26,7 @@
 <link rel="canonical" href="https://amulll.github.io/">
 <script class="next-config" data-name="page" type="application/json">{"sidebar":"","isHome":true,"isPost":false,"lang":"zh-TW","comments":"","permalink":"","path":"index.html","title":""}</script>
 <script class="next-config" data-name="calendar" type="application/json">""</script>
-<title>立宇空調</title>
+<title>立宇空調，冷氣、嘉義、冷氣出租，專業服務</title>
   
   <noscript>
     <link rel="stylesheet" href="/css/noscript.css">
