--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-TW">
 <head>
+<meta name="google-site-verification" content="NiHtCsiCL5AFWhQL0YGVa095-CjXkSyka4CqI8iJyKM" />
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width">
 <meta name="theme-color" content="#222">
