--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <script class="next-config" data-name="page" type="application/json">{"sidebar":"","isHome":true,"isPost":false,"lang":"zh-TW","comments":"","permalink":"","path":"index.html","title":""}</script>
 <script class="next-config" data-name="calendar" type="application/json">""</script>
 
-<title>立宇空調，冷氣、嘉義、冷氣出租，專業服務</title>  
+<title>立宇空調，位於嘉義提供全省冷氣租賃、維修，販售冷氣且提供專業服務</title>  
 	
   <noscript>
     <link rel="stylesheet" href="/css/noscript.css">
