--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width">
 <meta name="theme-color" content="#222">
 <meta name="description" content="立宇空調帶給您最安心的服務，冷氣出租，嘉義，專業服務，冷氣">
-<meta name="keywords" content="嘉義、冷氣、嘉義冷氣、冷氣出租、冷氣行、">
+<meta name="keywords" content="嘉義,冷氣,嘉義冷氣,冷氣出租,冷氣行">
 	
 <link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon-next.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32-next.png">
@@ -18,13 +18,13 @@
 <script class="next-config" data-name="main" type="application/json">{"hostname":"amulll.github.io","root":"/","images":"/images","scheme":"Muse","version":"8.7.0","exturl":false,"sidebar":{"position":"left","display":"post","padding":18,"offset":12},"copycode":false,"bookmark":{"enable":false,"color":"#222","save":"auto"},"mediumzoom":false,"lazyload":false,"pangu":false,"comments":{"style":"tabs","active":null,"storage":true,"lazyload":false,"nav":null},"motion":{"enable":true,"async":false,"transition":{"post_block":"fadeIn","post_header":"fadeInDown","post_body":"fadeInDown","coll_header":"fadeInLeft","sidebar":"fadeInUp"}},"prism":false,"i18n":{"placeholder":"搜尋...","empty":"我們無法找到任何有關 ${query} 的搜索結果","hits_time":"${hits} 找到 ${time} 個結果","hits":"找到 ${hits} 個結果"}}</script><script src="/js/config.js"></script>
 <!--facebook-->
 <meta property="og:type" content="website">
-<meta property="og:title" content="立宇空調，冷氣、嘉義、冷氣出租，專業服務">
+<meta property="og:title" content="立宇空調，位於嘉義提供全省冷氣租賃、維修，販售冷氣且提供專業服務">
 <meta property="og:url" content="https://amulll.github.io/index.html">
 <meta property="og:site_name" content="立宇空調">
 <meta property="og:description" content="立宇空調帶給您最安心的服務">
 <meta property="og:locale" content="zh_TW">
 <meta property="article:author" content="立宇空調">
-<meta property="article:tag" content="嘉義、冷氣、嘉義冷氣、冷氣出租、冷氣行">
+<meta property="article:tag" content="嘉義,冷氣,嘉義冷氣,冷氣出租,冷氣行">
 <meta name="twitter:card" content="summary">
 <link rel="canonical" href="https://amulll.github.io/">
 <script class="next-config" data-name="page" type="application/json">{"sidebar":"","isHome":true,"isPost":false,"lang":"zh-TW","comments":"","permalink":"","path":"index.html","title":""}</script>
