--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="zh-TW">
 <head>
+<title>冷氣租賃、維修、新舊買賣、保養，位於嘉義，提供全台專業服務|立宇空調</title>  
 <meta name="google-site-verification" content="NiHtCsiCL5AFWhQL0YGVa095-CjXkSyka4CqI8iJyKM" />
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width">
 <meta name="theme-color" content="#222">
-<meta name="description" content="立宇空調帶給您最安心的服務，冷氣出租，嘉義，專業服務，冷氣">
-<meta name="keywords" content="嘉義,冷氣,嘉義冷氣,冷氣出租,冷氣行">
+<meta name="description" content="擁有多年經驗的立宇空調帶給您最安心的服務，冷氣出租、維修、新舊買賣、保養，歡迎與我們聯絡">
+<meta name="keywords" content="嘉義,冷氣,嘉義冷氣,冷氣出租,冷氣行,維修,保養">
 	
 <link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon-next.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32-next.png">
@@ -18,19 +19,20 @@
 <script class="next-config" data-name="main" type="application/json">{"hostname":"amulll.github.io","root":"/","images":"/images","scheme":"Muse","version":"8.7.0","exturl":false,"sidebar":{"position":"left","display":"post","padding":18,"offset":12},"copycode":false,"bookmark":{"enable":false,"color":"#222","save":"auto"},"mediumzoom":false,"lazyload":false,"pangu":false,"comments":{"style":"tabs","active":null,"storage":true,"lazyload":false,"nav":null},"motion":{"enable":true,"async":false,"transition":{"post_block":"fadeIn","post_header":"fadeInDown","post_body":"fadeInDown","coll_header":"fadeInLeft","sidebar":"fadeInUp"}},"prism":false,"i18n":{"placeholder":"搜尋...","empty":"我們無法找到任何有關 ${query} 的搜索結果","hits_time":"${hits} 找到 ${time} 個結果","hits":"找到 ${hits} 個結果"}}</script><script src="/js/config.js"></script>
 <!--facebook-->
 <meta property="og:type" content="website">
-<meta property="og:title" content="立宇空調，位於嘉義提供全省冷氣租賃、維修，販售冷氣且提供專業服務">
+<meta property="og:title" content="冷氣租賃、維修、新舊買賣、保養，位於嘉義，提供全台專業服務|立宇空調">
 <meta property="og:url" content="https://amulll.github.io/index.html">
 <meta property="og:site_name" content="立宇空調">
-<meta property="og:description" content="立宇空調帶給您最安心的服務">
+<meta property="og:description" content="擁有多年經驗的立宇空調帶給您最安心的服務，冷氣出租、維修、新舊買賣、保養，歡迎與我們聯絡">
 <meta property="og:locale" content="zh_TW">
 <meta property="article:author" content="立宇空調">
-<meta property="article:tag" content="嘉義,冷氣,嘉義冷氣,冷氣出租,冷氣行">
+<meta property="article:tag" content="嘉義,冷氣,嘉義冷氣,冷氣出租,冷氣行,維修,保養">
 <meta name="twitter:card" content="summary">
+
 <link rel="canonical" href="https://amulll.github.io/">
 <script class="next-config" data-name="page" type="application/json">{"sidebar":"","isHome":true,"isPost":false,"lang":"zh-TW","comments":"","permalink":"","path":"index.html","title":""}</script>
 <script class="next-config" data-name="calendar" type="application/json">""</script>
 
-<title>立宇空調，位於嘉義提供全省冷氣租賃、維修，販售冷氣且提供專業服務</title>  
+
 	
   <noscript>
     <link rel="stylesheet" href="/css/noscript.css">
@@ -38,14 +40,7 @@
 </head>
  <!--開頭-->
 	<web-header>
-		<h1>立宇空調</h1>
-		<nav>
-			<ul>
-				<li><a href="#services">業務介紹</a></li>
-				<li><a href="#projects">成品分享</a></li>
-				<li><a href="#contact">聯絡我們</a></li>
-			</ul>
-		</nav>
+		
 	</web-header>
 	   <!--開頭-->
 <body itemscope itemtype="http://schema.org/WebPage" class="use-motion">
@@ -53,6 +48,14 @@
 	  
   <main class="main">
     <header class="header" itemscope itemtype="http://schema.org/WPHeader">
+	    <h1>立宇空調</h1>
+		<nav>
+			<ul>
+				<li><a href="#services">業務介紹</a></li>
+				<li><a href="#projects">成品分享</a></li>
+				<li><a href="#contact">聯絡我們</a></li>
+			</ul>
+		</nav>
       <div class="header-inner"><div class="site-brand-container">
   <div class="site-nav-toggle">
     <div class="toggle" aria-label="切換導航欄" role="button">
@@ -199,9 +202,9 @@
 			  <h3>聯絡資訊</h3>
 		  <p>歡迎透過以下方式聯絡我們：</p>
 			  <ul>
-				  <li><i class="fa fa-phone"></i> 0800-123-456</li>
-				  <li><i class="fa fa-map-marker"></i> 台北市中正區忠孝西路一段1號</li>
-				  <li><i class="fa fa-envelope"></i> info@liyuairc.com</li>
+				  <li><i class="fa fa-phone"></i> 05-2764140</li>
+				  <li><i class="fa fa-map-marker"></i> 嘉義市東區東義路99巷15號</li>
+				  
   
 		  </ul>
 		  </div>
