--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <header class="header" itemscope itemtype="http://schema.org/WPHeader">
 	    <!--開頭-->
       <web-header>
-        <h1>立宇空調</h1>
+        <h1>立宇空調工程</h1>
         <nav>
           <ul>
             <li><a href="#services">業務介紹</a></li>
