--- a/index.html
+++ b/index.html
@@ -74,19 +74,28 @@
       <p>讓您的空調保持良好的運行狀態。</p>
     </section>
     <section id="projects">
-      <h2>成品分享</h2>
+      <h2>服務項目</h2>
       <div class="project">
-				<img src="/images/project-1.jpg" alt="成品分享 1">
-				<p>這是我們最新完成的空調安裝項目，為客戶量身打造，整個安裝過程都非常順利，客戶非常滿意。</p>
-			</div>
-			<div class="project">
-				<img src="/images/project-1.jpg" alt="成品分享 2">
-				<p>這是我們最近完成的一個空調清洗項目，通過專業的清洗技術，讓客戶的空調運行更加穩定，降低了能耗，也提高了空氣質量。</p>
-			</div>
-			<div class="project">
-				<img src="/images/project-1.jpg" alt="成品分享 3">
-				<p>這是我們為一個辦公室進行的空調維修項目，由於維修及時，客戶沒有因為空調問題而影響工作進度，也省下了不少維修成本。</p>
-			</div>
+        <img src="/images/a3.jpg" alt="冷氣出租">
+        <div class="project-overlay">
+          <h3>冷氣出租</h3>
+          <p>這是我們最新完成的空調安裝項目，為客戶量身打造，整個安裝過程都非常順利，客戶非常滿意。</p>
+        </div>
+      </div>
+      <div class="project">
+        <img src="/images/air.jpg" alt="保養及維修">
+        <div class="project-overlay">
+          <h3>保養及維修</h3>
+          <p>這是我們最近完成的一個空調清洗項目，通過專業的清洗技術，讓客戶的空調運行更加穩定，降低了能耗，也提高了空氣質量。</p>
+        </div>
+      </div>
+      <div class="project">
+        <img src="/images/air2.jpg" alt="空調設備安裝">
+        <div class="project-overlay">
+          <h3>空調設備安裝</h3>
+          <p>這是我們為一個辦公室進行的空調維修項目，由於維修及時，客戶沒有因為空調問題而影響工作進度，也省下了不少維修成本。</p>
+        </div>
+      </div>
     </section>
     <!--表單-->
     <section id="contact">
@@ -114,8 +123,7 @@
       <span itemprop="copyrightYear">2021</span>
       <span class="with-love">
         <i class="fa fa-heart"></i>
-      </span>
-      <span class="author" itemprop="copyrightHolder">立宇空調</span>
+      
       </div>
     </div>
     </footer>
