--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width">
 <meta name="theme-color" content="#222">
 <meta name="description" content="擁有多年經驗的立宇空調帶給您最安心的服務，冷氣出租、維修、新舊買賣、保養，歡迎與我們聯絡">
-<meta name="keywords" content="嘉義,冷氣,嘉義冷氣,冷氣出租,冷氣行,維修,保養">
+<meta name="keywords" content="嘉義,冷氣,嘉義冷氣,冷氣出租,冷氣行,維修,保養,維修,保養,冷氣清洗,洗冷氣,展場冷氣,冷氣租賃">
 	
 <link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon-next.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32-next.png">
@@ -25,7 +25,7 @@
 <meta property="og:description" content="擁有多年經驗的立宇空調帶給您最安心的服務，冷氣出租、維修、新舊買賣、保養，歡迎與我們聯絡">
 <meta property="og:locale" content="zh_TW">
 <meta property="article:author" content="立宇空調">
-<meta property="article:tag" content="嘉義,冷氣,嘉義冷氣,冷氣出租,冷氣行,維修,保養">
+<meta property="article:tag" content="嘉義,冷氣,嘉義冷氣,冷氣出租,冷氣行,維修,保養,冷氣清洗,洗冷氣,展場冷氣,冷氣租賃">
 <meta name="twitter:card" content="summary">
 
 <link rel="canonical" href="https://amulll.github.io/">
