--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-TW">
 <head>
-<title>冷氣租賃、維修、新舊買賣、保養，位於嘉義，提供全台專業服務|立宇空調</title>  
+<title>立宇空調｜冷氣維修、清洗、保養</title>  
 <meta name="google-site-verification" content="NiHtCsiCL5AFWhQL0YGVa095-CjXkSyka4CqI8iJyKM" />
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width">
@@ -17,10 +17,10 @@
 <script class="next-config" data-name="main" type="application/json">{"hostname":"amulll.github.io","root":"/","images":"/images","scheme":"Muse","version":"8.7.0","exturl":false,"sidebar":{"position":"left","display":"post","padding":18,"offset":12},"copycode":false,"bookmark":{"enable":false,"color":"#222","save":"auto"},"mediumzoom":false,"lazyload":false,"pangu":false,"comments":{"style":"tabs","active":null,"storage":true,"lazyload":false,"nav":null},"motion":{"enable":true,"async":false,"transition":{"post_block":"fadeIn","post_header":"fadeInDown","post_body":"fadeInDown","coll_header":"fadeInLeft","sidebar":"fadeInUp"}},"prism":false,"i18n":{"placeholder":"搜尋...","empty":"我們無法找到任何有關 ${query} 的搜索結果","hits_time":"${hits} 找到 ${time} 個結果","hits":"找到 ${hits} 個結果"}}</script><script src="/js/config.js"></script>
 <!--facebook-->
 <meta property="og:type" content="website">
-<meta property="og:title" content="冷氣 租賃、冷氣 維修、冷氣 買賣、冷氣 保養，嘉義、全台，日立、大金，提供全台專業服務|立宇空調">
+<meta property="og:title" content="立宇空調｜冷氣 維修｜冷氣 清洗｜冷氣 保養｜嘉義｜全台｜日立｜大金｜專業服務">
 <meta property="og:url" content="https://amulll.github.io/index.html">
 <meta property="og:site_name" content="立宇空調">
-<meta property="og:description" content="擁有多年經驗的立宇空調帶給您最安心的服務，冷氣出租、維修、新舊買賣、保養，服務地區：嘉義縣市、全台地區，經銷各廠牌冷氣空調：日立、大金、國際、東元； 變頻冷氣、窗型冷氣、分離式冷氣、冰水機、送風機等皆可洽詢。提供服務包含：冷氣維修、冷氣保養清洗、冷氣安裝移機，歡迎與我們聯絡">
+<meta property="og:description" content="多年經驗的立宇空調給您最安心的服務，冷氣出租、維修保養，保養清洗、安裝移機。嘉義縣市、全台地區，各廠牌：日立、大金、國際、東元； 變頻冷氣、窗型冷氣、分離式冷氣。">
 <meta property="og:locale" content="zh_TW">
 <meta property="article:author" content="立宇空調">
 <meta property="article:tag" content="冷氣 維修,嘉義冷氣,冷氣 清洗,冷氣行,洗冷氣,展場 冷氣,冷氣 租賃">
